--- a/app/assets/stylesheets/custom.css.erb
+++ b/app/assets/stylesheets/custom.css.erb
@@ -6,8 +6,11 @@ body, html, .container-fluid {
 body { 
   background-size:100%;
   background-image:url('background.png');
-  padding-top: 90px; 
+  background-repeat: no-repeat;
+  padding-top: 93px; 
 }
+
+
 
 div.loading-gif {
   margin: 0 auto;
