--- a/app/assets/javascripts/templates/newExercise.hbs
+++ b/app/assets/javascripts/templates/newExercise.hbs
@@ -1,5 +1,9 @@
 {{#if showExercisePanel}}
 <h3>New Exercise</h3> 
+<div class="well well-sm">
+  <p class="help-block text-info">When you log an exercise, it will count toward all of your competitions that use that   specific exercise.
+  </p>
+</div>
 <ul class="list-group">
   <li class="list-group-item">
     {{#form-for model wrapper="bootstrap"}}
