--- a/app/assets/javascripts/templates/competitions.hbs
+++ b/app/assets/javascripts/templates/competitions.hbs
@@ -1,31 +1,34 @@
-{{resource-header title="Competitions" link="competitions.create"}}
+<h1>Competitions</h1>
+<hr>
 <div class="row">
-  <div class="col-md-6">
-    <div class="panel panel-info">
-      <div class="panel-heading">        
+  <div class="col-md-4">
+    <div class="well">
         <div class="row">
-          <div class="col-sm-4"><h3 class="panel-title">Competitions</h3></div>
-          <div class="col-sm-4">Number of Users</div>                      
-          <div class="col-sm-4">Status</div>
-        </div>
-      </div>
-      <div class="list-group">
-        {{#each competition in controller}} 
-          {{#unless competition.isNew}}         
-            {{#link-to "competition" competition class="list-group-item"}}
-              <div class="row">
-                <div class="col-sm-4">{{competition.name}}</div>
-                <div class="col-sm-4">{{competition.numberOfUsers}}</div>                      
-                <div class="col-sm-4"><span class="badge">{{competition.status}}</span></div>
-              </div>
-            {{/link-to}}   
-          {{/unless}}     
-        {{/each}}
-      </div>
+      <div class="col-sm-3"><p class="lead">Name</p></div>
+      <div class="col-sm-3">Number of Users</div>                      
+      <div class="col-sm-3">Status</div>
+      <div class="col-sm-3">Activeness</div>
+    </div> 
+    </div> 
+
+    <div class="list-group">
+      {{#each controller}} 
+        {{#unless this.isNew}}         
+          {{#link-to "competition" this class="list-group-item"}}
+            <div class="row">
+              <div class="col-sm-3">{{this.name}}</div>
+              <div class="col-sm-3">{{this.numberOfUsers}}</div>                      
+              <div class="col-sm-3">
+                <span {{bind-attr class=":label this.started:label-default:label-success" }}>{{this.status}}</span></div>
+              <div class="col-sm-3">{{{this.fireImg}}}</div>
+            </div>
+          {{/link-to}}   
+        {{/unless}}     
+      {{/each}}
     </div>
   </div>
 
-  <div class="col-md-6">
+  <div class="col-md-8">
     {{outlet}}
   </div>
 </div>
