--- a/app/assets/javascripts/templates/competitions/create.hbs
+++ b/app/assets/javascripts/templates/competitions/create.hbs
@@ -1,56 +1,57 @@
-<div class="panel panel-info">
-  <div class="panel-heading"><h3 class="panel-title">Competition Settings</h3></div>
-  <div class="panel-body">
-    <label class= "control-label">Select a Win Condition</label>
+<div class="well">
+  <h3>New Competition</h3>
+</div>
+
+<div class="well">
+<label class= "control-label">Select a Win Condition</label>
+{{view Ember.Select 
+      name="Win Condition Select"
+      content=winConditions  
+      value=this.model.competitionWinCondition
+      optionValuePath="content" 
+      optionLabelPath='content.name' 
+      class="form-control" 
+      prompt="Please select a win condition"}}
+{{#if model.competitionWinCondition}}
+  <br />
+  {{#if canAddExercise}}
     {{view Ember.Select 
-          name="Win Condition Select"
-          content=winConditions  
-          value=this.model.competitionWinCondition
-          optionValuePath="content" 
-          optionLabelPath='content.name' 
-          class="form-control" 
-          prompt="Please select a win condition"}}
-    {{#if model.competitionWinCondition}}
+        name="Exercise Select"
+        content=selectExercises  
+        value=selectedExercise
+        optionValuePath="content" 
+        optionLabelPath='content.name' 
+        class="form-control" 
+        prompt="Select the exercise you would like to add"}}
+    <br />
+    {{#if selectedExercise}}        
+      <button class="btn btn-success" {{action "addExercise" }}>Add Exercise</button>
       <br />
-      {{#if canAddExercise}}
-        {{view Ember.Select 
-            name="Exercise Select"
-            content=selectExercises  
-            value=selectedExercise
-            optionValuePath="content" 
-            optionLabelPath='content.name' 
-            class="form-control" 
-            prompt="Select the exercise you would like to add"}}
-        <br />
-        {{#if selectedExercise}}        
-          <button class="btn btn-success" {{action "addExercise" }}>Add Exercise</button>
-          <br />
-        {{/if}}
-      {{/if}}
-      <h4>Exercises</h4>
-      <ul class="list-group">
-        {{#each exercises}}
-          <li class="list-group-item">
-            {{this.name}} 
-            <a href="#" class="btn btn-xs btn-danger pull-right" {{action "removeExercise" this}}>x</a>
-          </li>
-        {{else}}
-          <li class="list-group-item">You haven't added one yet.</li>
-        {{/each}}
-      </ul>
-      <br />
-      
-      {{#if exercises}}
-        {{#form-for model wrapper="bootstrap"}}
-          {{input name}}
-          {{input description as="text"}}
-          {{input startDate as='datePicker'}}
-          {{input endDate as='datePicker'}}
-          {{input maxParticipants}}
-          <br />
-          {{submit id="competitionCreate" class="btn btn-primary"}}
-        {{/form-for}}
-      {{/if}}
     {{/if}}
-  </div>
+  {{/if}}
+  <h4>Exercises</h4>
+  <ul class="list-group">
+    {{#each exercises}}
+      <li class="list-group-item">
+        {{this.name}} 
+        <a href="#" class="btn btn-xs btn-danger pull-right" {{action "removeExercise" this}}>x</a>
+      </li>
+    {{else}}
+      <li class="list-group-item">You haven't added one yet.</li>
+    {{/each}}
+  </ul>
+  <br />
+  
+  {{#if exercises}}
+    {{#form-for model wrapper="bootstrap"}}
+      {{input name}}
+      {{input description as="text"}}
+      {{input startDate as='datePicker'}}
+      {{input endDate as='datePicker'}}
+      {{input maxParticipants}}
+      <br />
+      {{submit id="competitionCreate" class="btn btn-primary"}}
+    {{/form-for}}
+  {{/if}}
+{{/if}}
 </div>
