--- a/app/assets/javascripts/templates/competitions.hbs
+++ b/app/assets/javascripts/templates/competitions.hbs
@@ -2,16 +2,15 @@
 <hr>
 <div class="row">
   <div class="col-md-4">
-    <div class="well">
-        <div class="row">
-      <div class="col-sm-3"><p class="lead">Name</p></div>
-      <div class="col-sm-3">Number of Users</div>                      
-      <div class="col-sm-3">Status</div>
-      <div class="col-sm-3">Activeness</div>
-    </div> 
-    </div> 
-
     <div class="list-group">
+      <div class="list-group-item">
+        <div class="row well well-sm">
+          <div class="col-sm-3"><h5>Name</h5></div>
+          <div class="col-sm-3"><h5># of Users</h5></div>                      
+          <div class="col-sm-3"><h5>Status</h5></div>
+          <div class="col-sm-3"><h5>Activeness</h5></div>
+        </div> 
+      </div> 
       {{#each controller}} 
         {{#unless this.isNew}}         
           {{#link-to "competition" this class="list-group-item"}}
