--- a/app/assets/javascripts/templates/competitions/index.hbs
+++ b/app/assets/javascripts/templates/competitions/index.hbs
@@ -3,7 +3,7 @@
     <div class="col-sm-6">
       <img src="/assets/pushup.png" alt="competitions" class="img-rounded img-responsive">
     </div>
-    <div class="col-sm-6 gray-background">
+    <div class="col-sm-6 gray-background panel">
       <br>
       <div class="well">
         {{#link-to "competitions.create" class="btn btn-success btn-block"}}
