--- a/app/assets/stylesheets/custom.css.erb
+++ b/app/assets/stylesheets/custom.css.erb
@@ -109,9 +109,9 @@ div.loading-gif {
   font-size: 11px;
 }
 
-#trophy_pic.img-responsive {
-  margin-left: auto;
-  margin-right: auto;
+#trophy_case {
+  background-image:url('trophy-case.png');
+  background-size:100% 100%;
 }
 
 .gray-background {
