--- a/app/assets/javascripts/templates/profile.hbs
+++ b/app/assets/javascripts/templates/profile.hbs
@@ -1,42 +1,95 @@
-<ul class="nav nav-tabs">
-  <li>
-    {{#link-to "profile.stats"}}Stats{{/link-to}}
-  </li>
-  <li>
-    {{#link-to "profile.competitions"}}Competitions{{/link-to}}
-  </li>
-  <li>
-    {{#link-to "profile.challenges"}}Challenges{{/link-to}}
-  </li>
-  <li>
-    {{#link-to "profile.edit"}}Settings{{/link-to}}
-  </li>
-</ul>
-
+<h1>Profile</h1>
+<hr>
 <div class="row">
-  <div class="col-md-6">
-    {{outlet}}
+  <div class="col-md-3">
+    <div class="panel">
+      <div class="panel-heading">
+        <h3 class="panel-title">Profile for {{name}}</h3>
+      </div>
+      <div class="panel-body">
+        {{gravatarUrlLarge this}}
+        
+        <h4>Progress towards next level</h4>
+        <div class="progress">
+          {{bs-progressbar progress=30}}
+        </div>
+        <table class="table table-condensed table-bordered">
+          <tr><td><strong>Email:</strong> {{email}}</td></tr>
+          <tr><td><strong>Nickname:</strong> {{nickname}}</td></tr>
+          <tr><td><strong>Age:</strong> {{age}}</td></tr>
+          <tr><td><strong>Height:</strong> {{height}}</td></tr>
+          <tr><td><strong>Weight:</strong> {{weight}}</td></tr>
+          <tr><td><strong>Level:</strong> {{level}}</td></tr>
+          <tr><td><strong>Experience:</strong> {{experience}}</td></tr>
+          <tr><td><strong>Experience to next level:</strong> {{nextLevelExperience}}</td></tr>
+        </table>
+      </div>
+    </div>
   </div>
 
   <div class="col-md-6">
-    <div class="centered">
-      <div class="panel panel-info">
-        <div class="panel-heading">
-          <h3 class="panel-title">Level Progress</h3>
-        </div>
-        <h4>Progress towards next level</h4>
-        <div class="progress">
-          <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-            <span class="sr-only">60% Complete</span>
-          </div>
-        </div>
+    <ul class="nav nav-tabs">
+      <li>
+        {{#link-to "profile.stats"}}Stats{{/link-to}}
+      </li>
+      <li>
+        {{#link-to "profile.competitions"}}Competitions{{/link-to}}
+      </li>
+      <li>
+        {{#link-to "profile.challenges"}}Challenges{{/link-to}}
+      </li>
+      <li>
+        {{#link-to "profile.edit"}}Settings{{/link-to}}
+      </li>
+    </ul>
+    {{outlet}}
+  </div>
+
+
+  <div class="col-md-3">
+    <div class="panel">
+      <div class="panel-heading">
+        <h3 class="panel-title">Trophies</h3>
       </div>
-      <div class="panel panel-info">
-        <div class="panel-heading">
-          <h3 class="panel-title">Trophies</h3>
+
+      <div id="trophy_case" class="row">
+        <div class="col-sm-2"></div>
+        <div  class="col-sm-8">
+          <ul class="list-inline row">
+            <li class='col-sm-2'><img class="img-responsive" src='/assets/trophy.png' /></li>
+            <li class='col-sm-2'><img class="img-responsive" src='/assets/trophy.png' /></li>
+            <li class='col-sm-2'><img class="img-responsive" src='/assets/trophy.png' /></li>
+            <li class='col-sm-2'><img class="img-responsive" src='/assets/trophy.png' /></li>
+            <li class='col-sm-2'><img class="img-responsive" src='/assets/trophy.png' /></li>
+            <li class='col-sm-2'><img class="img-responsive" src='/assets/trophy.png' /></li>
+          </ul>
+          <ul class="list-inline row">
+            <li class='col-sm-2'><img class="img-responsive" src='/assets/trophy.png' /></li>
+            <li class='col-sm-2'><img class="img-responsive" src='/assets/trophy.png' /></li>
+            <li class='col-sm-2'><img class="img-responsive" src='/assets/trophy.png' /></li>
+            <li class='col-sm-2'><img class="img-responsive" src='/assets/trophy.png' /></li>
+            <li class='col-sm-2'><img class="img-responsive" src='/assets/trophy.png' /></li>
+            <li class='col-sm-2'><img class="img-responsive" src='/assets/trophy.png' /></li>
+          </ul>
+          <ul class="list-inline row">
+            <li class='col-sm-2'><img class="img-responsive" src='/assets/trophy.png' /></li>
+            <li class='col-sm-2'><img class="img-responsive" src='/assets/trophy.png' /></li>
+            <li class='col-sm-2'><img class="img-responsive" src='/assets/trophy.png' /></li>
+            <li class='col-sm-2'><img class="img-responsive" src='/assets/trophy.png' /></li>
+            <li class='col-sm-2'><img class="img-responsive" src='/assets/trophy.png' /></li>
+            <li class='col-sm-2'><img class="img-responsive" src='/assets/trophy.png' /></li>
+          </ul>
+          <ul class="list-inline row">
+            <li class='col-sm-2'><img class="img-responsive" src='/assets/trophy.png' /></li>
+            <li class='col-sm-2'><img class="img-responsive" src='/assets/trophy.png' /></li>
+            <li class='col-sm-2'><img class="img-responsive" src='/assets/trophy.png' /></li>
+            <li class='col-sm-2'><img class="img-responsive" src='/assets/trophy.png' /></li>
+            <li class='col-sm-2'><img class="img-responsive" src='/assets/trophy.png' /></li>
+            <li class='col-sm-2'><img class="img-responsive" src='/assets/trophy.png' /></li>
+          </ul>
+        <div class="col-sm-2"></div>
         </div>
-        <img id="trophy_pic" src='/assets/trophy-case.png' class="img-responsive"/>
-      </div> 
-    </div>
+      </div>        
+    </div> 
   </div> 
 </div>
