--- a/app/assets/javascripts/templates/profile/challenges.hbs
+++ b/app/assets/javascripts/templates/profile/challenges.hbs
@@ -1,4 +1,4 @@
-<div class="panel panel-info challenges-panel">
+<div class="panel">
   <div class="panel-heading">
     <h3 class="panel-title">My Challenge Attemptss</h3>
   </div>
