--- a/app/assets/javascripts/templates/profile/exercises.hbs
+++ b/app/assets/javascripts/templates/profile/exercises.hbs
@@ -1,4 +1,4 @@
-<div class="panel panel-info">
+<div class="panel">
   <div class="panel-heading">
     <h3 class="panel-title">New Custom Exercises</h3>
   </div>
