--- a/app/assets/javascripts/templates/users.hbs
+++ b/app/assets/javascripts/templates/users.hbs
@@ -1,6 +1,8 @@
+<h1>Users</h1>
+<hr>
 <div class="row">
   <div class="col-md-4">
-    <div class="panel panel-info">
+    <div class="panel">
       <div class="panel-heading">
         <h3 class="panel-title">Users</h3>
       </div>
@@ -21,9 +23,7 @@
   </div>
 
   <div class="col-md-8">
-    <div class="user-fixed-vertical">
-      {{outlet}}
-    </div>
+    {{outlet}}
   </div>
 </div>
 
