--- a/app/assets/javascripts/templates/users/index.hbs
+++ b/app/assets/javascripts/templates/users/index.hbs
@@ -1,4 +1,4 @@
-<div class="panel panel-info">
+<div class="panel">
   <div class="panel-heading">
     <h3 class="panel-title">Information for other Users</h3>
   </div>
