--- a/app/assets/javascripts/templates/user.hbs
+++ b/app/assets/javascripts/templates/user.hbs
@@ -4,11 +4,10 @@
   </div>
   <div class="panel-body">
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-sm-4">
         {{gravatarUrlLarge this.model}}
       </div>
-      <div class="col-md-8">
-        <blockquote>
+      <div class="col-sm-8">
         <p>Nickname: {{nickname}}</p>
         <p>Age: {{age}}</p>
         <p>Height: {{height}}</p>
@@ -16,10 +15,7 @@
         <p>Level: {{level}}</p>
         <p>Experience: {{experience}}</p>
         <p>Experience to next level: {{nextLevelExperience}}</p>
-        </blockquote>
       </div>
     </div>
-
-    {{view WorkoutWars.UserStatView}}
   </div>
 </div>
