adds recent activity

--- a/app/assets/javascripts/templates/newExercise.hbs
+++ b/app/assets/javascripts/templates/newExercise.hbs
@@ -23,7 +23,7 @@
 </ul>
 <h4>My Recent Exercises</h4>
 <ul class="list-group">
-  {{#each currentUser.activities}}
+  {{#each currentUser.recentActivities}}
   <li class="list-group-item">
     <div class="row">
       <div class="col-md-4">
