--- a/app/assets/javascripts/templates/index.hbs
+++ b/app/assets/javascripts/templates/index.hbs
@@ -40,7 +40,7 @@
     <div class="well">
       <h3>Recent Site Activity</h3>
     </div>
-    {{render "recentActivity" recentActivity}}
+    {{render "recentActivity" controller}}
   </div>
 </div>
 {{currentUser.competitionJoins}}
