--- a/app/assets/javascripts/templates/recentActivity.hbs
+++ b/app/assets/javascripts/templates/recentActivity.hbs
@@ -4,16 +4,13 @@
       <div class="row">    
         <br>
         <div class="col-md-2 col-sm-3 text-center">
-          <a class="story-img" href="#"><img src="//placehold.it/100" style="width:100px;height:100px" class="img-circle"></a>
+          <a class="story-img" href="#"><img src="/assets/dumbbell-icon.png" style="width:60px;height:60px" class="img-circle"></a>
         </div>
         <div class="col-md-10 col-sm-9">
-          <h3>{{name}}</h3>
+          <h5>{{description}}</h5>
           <div class="row">
             <div class="col-xs-9">
-              <p>{{description}}</p>
-              <p class="lead"><button class="btn btn-default">Read More</button></p>
-              <p class="pull-right"><span class="label label-default">keyword</span> <span class="label label-default">tag</span> <span class="label label-default">post</span></p>
-              <ul class="list-inline"><li><a href="#">2 Days Ago</a></li><li><a href="#"><i class="glyphicon glyphicon-comment"></i> 4 Comments</a></li><li><a href="#"><i class="glyphicon glyphicon-share"></i> 34 Shares</a></li></ul>
+              <ul class="list-inline"><li><a href="#">{{shortDateTime createdAt}}</a></li><li><a href="#"></ul>
               </div>
             <div class="col-xs-3"></div>
           </div>
