updates user level progress

--- a/app/assets/javascripts/templates/profile.hbs
+++ b/app/assets/javascripts/templates/profile.hbs
@@ -11,7 +11,7 @@
         
         <h4>Progress towards next level</h4>
         <div class="progress">
-          {{bs-progressbar progress=30}}
+          {{bs-progressbar progress=levelProgress}}
         </div>
         <table class="table table-condensed table-bordered">
           <tr><td><strong>Email:</strong> {{email}}</td></tr>
