--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -65,7 +65,7 @@
         <small>New Exercise</small>
       {{/if}}
     </a>
-    {{render "newExercise" newExercise}}
+    {{outlet "sidebar"}}
   </div>
 </div> 
 </div><!-- /container -->
