--- a/app/assets/javascripts/templates/profile/exercises.hbs
+++ b/app/assets/javascripts/templates/profile/exercises.hbs
@@ -24,7 +24,7 @@
           {{/each}}
         </tr>
         <tr>
-          {{#each activitiesByDay}}
+          {{#each userExercisesByDay}}
             <td>{{basic-list collection=this}}</td>
           {{/each}}
         </tr>
