fix invalid html issue

--- a/app/assets/javascripts/templates/index.hbs
+++ b/app/assets/javascripts/templates/index.hbs
@@ -52,11 +52,10 @@
               <h5>{{description}}</h5>
               <div class="row">
                 <div class="col-xs-9">
-                  <ul class="list-inline"><li><a href="#">{{shortDateTime createdAt}}</a></li><li><a href="#"></ul>
+                  <ul class="list-inline"><li><a href="#">{{shortDateTime createdAt}}</a></li></ul>
                   </div>
                 <div class="col-xs-3"></div>
               </div>
-              <br><br>
             </div>
           </div>
           <hr>
