--- a/app/assets/javascripts/templates/index.hbs
+++ b/app/assets/javascripts/templates/index.hbs
@@ -22,9 +22,9 @@
         <tr>
           <td colspan="3">
             <p class="lead text-warning text-center">You are not currently in any competitions that include {{selectedExercise.name}}. Would you like to</p>
-            <a href="#" class="btn btn-success center-block" {{action "createCompetiton" selectedExercise}}> Create a new one ?</a> 
+            <a href="#" class="btn btn-success center-block" {{action "createCompetition" selectedExercise}}> Create a new one ?</a> 
             <p class="text-center">- OR -</p> 
-            <a href="#" class="btn btn-primary center-block" {{action "createCompetiton" selectedExercise}}>join an existing one ?</a>
+            <a href="#" class="btn btn-primary center-block" {{action "joinCompetition" selectedExercise}}>join an existing one ?</a>
           </td>
         </tr>
         {{else}}
