fixes modal and comp exercise serializer

--- a/app/assets/javascripts/templates/profile/exercises.hbs
+++ b/app/assets/javascripts/templates/profile/exercises.hbs
@@ -29,11 +29,9 @@
               {{#each userExercise in this}}
               <div class="list-group">
                 <a href="#" {{action "openExercise" userExercise}} class="list-group-item" name="viewExercise">
-                  <dl>
-                    <dt>{{userExercise.exercise.name}}</dt>
-                    <dd>{{time userExercise.createdAt}}</dd>
-                    <dd>{{userExercise.value}} {{userExercise.exercise.metric.measurement}}</dd>
-                  </dl>
+                  <p>{{userExercise.exercise.name}}</p>
+                  <p>{{time userExercise.createdAt}}</p>
+                  <p>{{userExercise.value}} {{userExercise.exercise.metric.measurement}}</p>
                 </a>
               </div>
               {{/each}}
