--- a/app/assets/javascripts/templates/user_exercise.hbs
+++ b/app/assets/javascripts/templates/user_exercise.hbs
@@ -1,6 +1,6 @@
 <div class="modal-header">
   <button type="button" class="close" {{action "close" target="view"}}>&times;</button>
-  <h3>Exercise</h3>
+  <button type="button" class="btn btn-danger" {{action "deleteUserExercise" model}}>delete</button>
 </div>
 
 <div class="modal-body">        
@@ -14,9 +14,9 @@
   <h4>This exercise counted for these competitions</h4>
   <ul>
     {{#each model.competitionUserExercises}}
-    <li>
-      {{this.competition.name}}
-    </li>
+      <li>{{this.competition.name}}</li>
+    {{else}}
+      <li>None</li>
     {{/each}}
   </ul>
 </div>
