--- a/app/assets/javascripts/templates/index.hbs
+++ b/app/assets/javascripts/templates/index.hbs
@@ -13,7 +13,7 @@
       </tr>
       {{#each currentCompJoins}}
         <tr>
-          <td>{{#link-to "competition" this}}{{this.competition.name}}{{/link-to}}</td>
+          <td>{{#link-to "competition" this.competition}}{{this.competition.name}}{{/link-to}}</td>
           <td>{{this.rank}}</td>
           <td>{{this.total}}</td>
         </tr>
