--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,12 +1,39 @@
+<div class="row">
+<div class="col-md-3"></div> 
+<div class="col-md-6">
+<div class="well">
 <h2>Forgot your password?</h2>
+<hr>
 
 <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
   <%= devise_error_messages! %>
+  <div class="row">
+    <div class="form-group">
+      <%= f.label :email, class: "col-sm-3 control-label" %>
+      <div class="col-sm-9">
+        <%= f.email_field :email, :autofocus => true, class: "form-control"  %>
+      </div>
+    </div>
+  </div>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
+  <br />
 
-  <div><%= f.submit "Send me reset password instructions" %></div>
+  <div class="row">
+    <div class="form-group">
+      <div class="col-sm-offset-3 col-sm-9">
+        <%= f.submit "Send me reset password instructions", class: "btn btn-success btn-block btn-default" %>
+      </div>
+    </div>
+  </div>
 <% end %>
-
-<%= render "devise/shared/links" %>
+  <div class="row">
+    <div class="form-group">
+      <div class="col-sm-offset-3 col-sm-9">
+        <%= render "devise/shared/links" %>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+<div class="col-md-3"></div> 
+</div>
