--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,7 @@
 <div class="row">
 <div class="col-md-3"></div> 
 <div class="col-md-6">
+<div class="well">
 <h2>Sign up</h2>
 <hr>
 
@@ -74,6 +75,7 @@
       </div>
     </div>
   </div>
+</div>
 </div>
 <div class="col-md-3"></div>
 </div>
