--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -24,7 +24,7 @@
           <div class="carousel-caption">
             <h1>Never skip a workout again</h1>
             <p>Using ideas from the latest scientific studies, we have found a way to help motivate people to workout at a higher level.</p>
-            <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+            <p><%= link_to "Learn More", info_path, class: "btn btn-lg btn-primary" %></p>
           </div>
         </div>
       </div>
