begins to change activity tests to user exercise tests

--- a/app/assets/javascripts/templates/newExercise.hbs
+++ b/app/assets/javascripts/templates/newExercise.hbs
@@ -22,7 +22,7 @@
   </li>
 </ul>
 <h4>My Recent Exercises</h4>
-<ul class="list-group">
+<ul id="recent_exercises" class="list-group">
   {{#each currentUser.recentUserExercises}}
   <li class="list-group-item">
     <div class="row">
