--- a/app/assets/javascripts/templates/profile.hbs
+++ b/app/assets/javascripts/templates/profile.hbs
@@ -6,7 +6,7 @@
       <div class="panel-heading">
         <h3 class="panel-title">Profile for {{name}}</h3>
       </div>
-      <div class="panel-body">
+      <div id="user_info" class="panel-body">
         {{gravatarUrlLarge this}}
         
         <h4>Progress towards next level</h4>
