--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   
   <% if user_signed_in? %>
     <meta name="current-user" content="<%= (current_user.id).to_json %>" />
-  <%= yield %>
+    <%= yield %>
   <% else %>
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
@@ -27,10 +27,20 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><%= link_to "Home", unauthenticated_root_path %></li>
-            <li><%= link_to "Sign up", new_user_registration_path, id: "sign_up_button" %></li>
-            <li><%= link_to "Sign In", new_user_session_path, id: "sign_in_button" %></li>
+            <li>              
+              <a href="#" data-toggle="modal" data-target="#signupModal">
+                Sign Up Now!
+              </a>
+            </li>
+          </ul>
+
+          <ul class="nav navbar-nav navbar-right">
+            <li><p class="navbar-text navbar-right">Already a Workout Warrior?&nbsp;</li>
+            <li class="divider"></li>
             <li>
-              <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
+              <button type="button" class="btn btn-sm btn-success navbar-btn" data-toggle="modal" data-target="#loginModal">
+                Log In
+              </button>
             </li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -39,7 +49,91 @@
     <div class="container">
       <%= render 'shared/flash' %>
       <%= yield %>
+      <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <%= form_for(resource, :as => resource_name, :url => session_path(resource_name)) do |f| %>
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+              <h4 class="modal-title text-center" id="loginModalLabel">Log In</h4>
+            </div>
+
+            <div class="modal-body">              
+              <div class="form-group">
+                <%= f.label :email, class: "control-label sr-only" %>
+                <%= f.email_field :email, :autofocus => true, placeholder: "Enter your email address", class: "input-lg form-control"  %>
+              </div>
+
+              <div class="form-group">
+                <%= f.label :password, class: "control-label sr-only"  %>      
+                <%= f.password_field :password, placeholder: "Enter your password", class: "input-lg form-control" %>
+              </div>
+
+              <div class="form-group">
+                <%= f.submit "Sign in", class: "btn btn-lg btn-block btn-success" %>  
+              </div> 
+              <hr>
+              <div class="form-group">
+                <%= link_to user_omniauth_authorize_path(:facebook), class: "btn btn-lg btn-block btn-default"  do %>
+                  <i class="fa fa-facebook-square"></i> Sign in with Facebook
+                <% end %>
+              </div>
+            </div>             
+            <% end %>
+          </div>
+        </div>
+      </div>
+
+      <div class="modal fade" id="signupModal" tabindex="-1" role="dialog" aria-labelledby="signupModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+              <h4 class="modal-title text-center" id="loginModalLabel">Sign Up</h4>
+            </div>
+            <div class="modal-body"> 
+            <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+              <%= devise_error_messages! %>
+
+              <div class="form-group">
+                <%= f.label :email, class: "control-label sr-only" %>
+                <%= f.email_field :email, :autofocus => true, placeholder: "Please enter your email address", required: true, class: "input-lg form-control"  %>
+              </div>
+
+              <div class="form-group">
+                <%= f.label :password_confirmation, class: "control-label sr-only"  %>      
+                <%= f.password_field :password_confirmation, placeholder: "Please enter your password", class: "input-lg form-control" %>
+              </div>
+
+              <div class="form-group">
+                <%= f.label :password_confirmation, class: "control-label sr-only"  %>      
+                <%= f.password_field :password_confirmation, placeholder: "Please re-enter your password", class: "input-lg form-control" %>
+              </div>
+
+              <div class="terms">
+                <%= render "shared/privacy" %>
+              </div>
+
+              <div class="checkbox checkbox-agree">
+                <%= f.check_box :agree_to_terms, id: "user_agree_to_terms" %>
+                <%= f.label :agree_to_terms, " I agree to the terms and conditions above" %>
+              </div>
+
+              <div class="form-group">
+                <%= f.submit "Sign up", class: "btn btn-success btn-block btn-default", id: "sign_up_form_button" %>
+              </div>
+            <% end %>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+    <!-- FOOTER -->
+    <nav class="navbar-fixed-bottom" role="navigation">
+      <footer id="main-footer">       
+        <p class="text-center text-default">&copy; 2013 Senior Project for Cody Tanner, Joey Gibson, John Hanks, and Charmaine Keck &middot; <%= link_to 'Privacy', privacy_path %>&middot; <%= link_to 'Terms', privacy_path %></p>
+      </footer>
+    </nav>
   <% end %>
 </body>
 </html>
