more css tweaks

--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -47,7 +47,7 @@
   <div class="row featurette">
     <div class="col-md-7">
       <h2 class="featurette-heading">Get the results you want. <span class="text-muted"> Compete to Win.</span></h2>
-      <p class="lead">Get fit while having fun competing with your friends and challenging yourself to achieve new levels of fitness. Whatever your fitness goals are the key to achieving results is consistency. We keep you motivated by using your friends and others on the site to challenge you to keep going. We're leveraging postive peer presure to keep you in the game.</p>
+      <p class="lead">Get fit while having fun competing with your friends and challenging yourself to achieve new levels of fitness. Whatever your fitness goals are, the key to achieving results is consistency. We keep you motivated by using your friends and others on the site to challenge you to keep going. We're leveraging postive peer presure to keep you in the game.</p>
     </div>
     <div class="col-md-5">
       <%= image_tag "small-home1.jpg", alt: "Generic Image", class: "featurette-image img-responsive" %>
@@ -61,8 +61,8 @@
       <%= image_tag "small-home2.jpg", alt: "Generic Image", class: "featurette-image img-responsive" %>
     </div>
     <div class="col-md-7">
-      <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">Challenge Yourself.</span></h2>
-      <p class="lead">Challenge yourself to reach your fitness goals. If competing against others isn't your thing then just compete against yourself in personal challenges. Choose one of the pre-defined challenges or create your own and see your progress over time. Need additional motivation, make your challenge public and see how others compare.</p>
+      <h2 class="featurette-heading">Does it work? <span class="text-muted"> Oh yeah!</span></h2>
+      <p class="lead">Signing up is free so there is no reason not to. Once you get a taste of how it can be to push your fitness levels with your friends, you will never want to workout any other way.</p>
     </div>
   </div>
 
