--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -1,53 +1,34 @@
 <!-- Fixed navbar -->
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
   <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      {{#link-to "index"}}
-        <img src="/assets/ww-brand.png" />
-      {{/link-to}}
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="/"><img src="/assets/ww-brand.png" height="22" /></a>
+      </div>
+      <div class="navbar-collapse collapse">
+        <ul class="nav navbar-nav">
+          <li>{{#link-to "index"}}<i class="fa fa-dashboard"></i> Dashboard{{/link-to}}</li>
+          <li>{{#link-to "competitions"}}<i class="fa fa-crosshairs"></i> Competitions{{/link-to}}</li>
+          <li>{{#link-to "profile" currentUser name="My Profile"}}<i class="fa fa-user"></i> Profile{{/link-to}}</li>
+          <li>{{#link-to "users"}}<i class="fa fa-group"></i> Users{{/link-to}}</li>
+        </ul>
+        <p class="navbar-text navbar-right">Signed in as {{currentUser.handle}}</p>
+        <ul class="nav navbar-nav pull-right">
+          <li class="divider"></li>
+          <li>
+            <a href="/users/sign_out" data-method="delete" id='sign_out_button'>
+              <i class="fa fa-sign-out"></i> Logout
+            </a>
+          </li>
+        </ul>
+      </div><!--/.nav-collapse -->
     </div>
-    <div class="navbar-collapse collapse">
-      <ul class="nav navbar-nav">
-        <li class="text-center">
-          {{#link-to "index"}}
-            <i class="fa fa-dashboard fa-3x"></i><br>
-            Dashboard
-          {{/link-to}}
-        </li>
-        <li class="text-center">
-          {{#link-to "competitions"}}
-            <i class="fa fa-crosshairs fa-3x"></i><br>
-            Competitions
-          {{/link-to}}
-        </li> 
-        <li class="text-center">
-          {{#link-to "profile" currentUser name="My Profile"}}
-            <i class="fa fa-user fa-3x"></i><br>
-            Profile
-          {{/link-to}}
-        </li>
-        <li class="text-center">
-          {{#link-to "users"}}
-            <i class="fa fa-group fa-3x"></i><br>
-            Users            
-          {{/link-to}}
-        </li>
-      </ul>
-      <ul class="nav navbar-nav pull-right">
-        <li class="text-center">
-          <a href="/users/sign_out" data-method="delete" id='sign_out_button'>
-            <i class="fa fa-sign-out fa-3x"></i><br>
-            Logout
-          </a>
-        </li>
-      </ul>
-    </div><!--/.nav-collapse -->
   </div>
 </div>
 
@@ -58,13 +39,15 @@
     {{view WorkoutWars.FlashView model=WorkoutWars.flash}}
     {{outlet}}
   </div>
-  <div {{bind-attr class=":gray-background showExercisePanel:col-md-3:col-md-1"}}>
+  <div {{bind-attr class=":gray-background :panel showExercisePanel:col-md-3:col-md-1"}}>
     <a href="#" {{action "toggleExercisePanel"}}>
       {{#if showExercisePanel}}
         <i class="fa fa-3x fa-minus-square"></i>
       {{else}}
-        <i class="fa fa-plus-square"></i>
-        <small>New Exercise</small>
+        <p class="text-center">
+          <i class="fa fa-3x fa-plus-square"></i><br>
+          <strong>New Exercise</strong>
+        </p>
       {{/if}}
     </a>
     {{outlet "sidebar"}}
