--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"><%= image_tag "ww-gray.png", height: 22 %></a>
+          <a class="navbar-brand" href="/"><%= image_tag "ww-gray.png", height: 22 %></a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -72,6 +72,7 @@
               <div class="form-group">
                 <%= f.submit "Sign in", class: "btn btn-lg btn-block btn-success" %>  
               </div> 
+              <%= link_to "Forgot your password?", new_password_path(resource_name) %>
               <hr>
               <div class="form-group">
                 <%= link_to user_omniauth_authorize_path(:facebook), class: "btn btn-lg btn-block btn-default"  do %>
@@ -92,37 +93,7 @@
               <h4 class="modal-title text-center" id="loginModalLabel">Sign Up</h4>
             </div>
             <div class="modal-body"> 
-            <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-              <%= devise_error_messages! %>
-
-              <div class="form-group">
-                <%= f.label :email, class: "control-label sr-only" %>
-                <%= f.email_field :email, :autofocus => true, placeholder: "Please enter your email address", required: true, class: "input-lg form-control"  %>
-              </div>
-
-              <div class="form-group">
-                <%= f.label :password_confirmation, class: "control-label sr-only"  %>      
-                <%= f.password_field :password_confirmation, placeholder: "Please enter your password", class: "input-lg form-control" %>
-              </div>
-
-              <div class="form-group">
-                <%= f.label :password_confirmation, class: "control-label sr-only"  %>      
-                <%= f.password_field :password_confirmation, placeholder: "Please re-enter your password", class: "input-lg form-control" %>
-              </div>
-
-              <div class="terms">
-                <%= render "shared/privacy" %>
-              </div>
-
-              <div class="checkbox checkbox-agree">
-                <%= f.check_box :agree_to_terms, id: "user_agree_to_terms" %>
-                <%= f.label :agree_to_terms, " I agree to the terms and conditions above" %>
-              </div>
-
-              <div class="form-group">
-                <%= f.submit "Sign up", class: "btn btn-success btn-block btn-default", id: "sign_up_form_button" %>
-              </div>
-            <% end %>
+              <%= render 'shared/signup' %>
             </div>
           </div>
         </div>
