--- a/app/assets/javascripts/templates/competition.hbs
+++ b/app/assets/javascripts/templates/competition.hbs
@@ -1,7 +1,8 @@
 <h2>{{name}}</h2>
-<p class="lead text-warning">{{description}}</p>
-<hr>
-
+<div class="well well-sm">
+  <p class="lead text-center">Description</p>
+  <p class="lead text-info text-center">{{description}}</p>
+</div>
 <div class="row">
   <div class="col-md-4">
     <div class="well">
