--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -70,13 +70,13 @@
               </div>
 
               <div class="form-group">
-                <%= f.submit "Sign in", class: "btn btn-lg btn-block btn-success" %>  
+                <%= f.submit "Log In", class: "btn btn-lg btn-block btn-success" %>  
               </div> 
               <%= link_to "Forgot your password?", new_password_path(resource_name) %>
               <hr>
               <div class="form-group">
                 <%= link_to user_omniauth_authorize_path(:facebook), class: "btn btn-lg btn-block btn-default"  do %>
-                  <i class="fa fa-facebook-square"></i> Sign in with Facebook
+                  <i class="fa fa-facebook-square"></i> Log in with Facebook
                 <% end %>
               </div>
             </div>             
