updating competition cucumbers

--- a/app/assets/javascripts/templates/competitions/create.hbs
+++ b/app/assets/javascripts/templates/competitions/create.hbs
@@ -16,7 +16,7 @@
   <br />
   {{#if canAddExercise}}
     {{view Ember.Select 
-        name="Exercise Select"
+        name="Competition Exercise Select"
         content=selectExercises  
         value=selectedExercise
         optionValuePath="content" 
