--- a/app/assets/javascripts/templates/competition.hbs
+++ b/app/assets/javascripts/templates/competition.hbs
@@ -23,6 +23,16 @@
       <ul class="list-group">
         {{#if canJoin}}
           <li class="list-group-item"><button class="btn btn-danger btn-block" {{action "join"}}>Join</button></li>
+        {{/if}}
+        {{#if canUpdate}}
+          {{!--           
+            <li class="list-group-item">
+              {{#link-to "competition.edit" this id="edit_competition" class="btn btn-default btn-block"}}Edit{{/link-to}}
+            </li> 
+          --}}
+          <li class="list-group-item">
+            <a href="#" class="btn btn-default btn-block" name="Delete Competition" {{action "delete" this}}>Delete</a>
+          </li>
         {{/if}}  
         {{info-item title="Status" value=status}}
         {{info-item title="Creator" value=user.handle}}
