updates user exercises cucumber

--- a/app/assets/javascripts/templates/profile/exercises.hbs
+++ b/app/assets/javascripts/templates/profile/exercises.hbs
@@ -17,7 +17,7 @@
           </div>
         </div>
       </div>
-      <table id="activity-calendar" class="table table-bordered table-striped">
+      <table id="user-exercise-calendar" class="table table-bordered table-striped">
         <tr>
           {{#each tableTitles}}
             <th>{{this}}</th>
