--- a/app/assets/javascripts/templates/competition.hbs
+++ b/app/assets/javascripts/templates/competition.hbs
@@ -67,7 +67,7 @@
     <div class="well">
       <h3>Leaderboard</h3>    
     </div>
-    <div class="panel">
+    <div id="competitionLeaderboard" class="panel">
       <table class="table table-hover table-striped">
         <thead>
           <tr class="active">
