--- a/app/assets/javascripts/templates/user_exercise.hbs
+++ b/app/assets/javascripts/templates/user_exercise.hbs
@@ -1,6 +1,6 @@
 <div class="modal-header">
   <button type="button" class="close" {{action "close" target="view"}}>&times;</button>
-  <button type="button" class="btn btn-danger" {{action "deleteUserExercise" model}}>delete</button>
+  <button type="button" class="btn btn-danger" {{action "deleteUserExercise" model}}>Delete</button>
 </div>
 
 <div class="modal-body">        
