makes users scroll

--- a/app/assets/stylesheets/custom.css.erb
+++ b/app/assets/stylesheets/custom.css.erb
@@ -32,6 +32,10 @@ div.loading-gif {
   border: 1px solid #eee;
 }
 
+.scroll {
+  overflow-y: scroll;
+}
+
 .side-arrow {
   position: absolute;  
   width: 100px; 
