--- a/app/assets/javascripts/templates/users.hbs
+++ b/app/assets/javascripts/templates/users.hbs
@@ -5,7 +5,7 @@
       <div class="panel-heading">
         <h3 class="panel-title">Users</h3>
       </div>
-      <div class="list-group">
+      <div class="list-group scroll">
         {{#each user in controller}}          
           {{#link-to "user" user class="list-group-item"}}
             <div class="row">
