--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -46,7 +46,7 @@
       {{else}}
         <p class="text-center">
           <i class="fa fa-3x fa-plus-square"></i><br>
-          <strong>New Exercise</strong>
+          <strong>Log Exercise</strong>
         </p>
       {{/if}}
     </a>
