--- a/app/assets/javascripts/templates/new_exercise.hbs
+++ b/app/assets/javascripts/templates/new_exercise.hbs
@@ -1,5 +1,5 @@
 {{#if showExercisePanel}}
-<h3>New Exercise</h3> 
+<h3>Log Exercise</h3> 
 <div class="well well-sm">
   <p class="help-block text-info">When you log an exercise, it will count toward all of your competitions that use that   specific exercise.
   </p>
